samples/_failures_safe/1761209938_e28596_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e2607d51.c: In function ‘main’:
./samples/SAFE/__tmp_e2607d51.c:156:24: error: missing terminating " character
  156 |                 printf("Enter target node:
      |                        ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e2607d51.c:156:17: error: expected expression at end of input
  156 |                 printf("Enter target node:
      |                 ^~~~~~
./samples/SAFE/__tmp_e2607d51.c:156:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e2607d51.c:156:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e2607d51.c:156:17: error: expected declaration or statement at end of input
